[gd_scene load_steps=4 format=2]

[ext_resource path="res://Map Components/Platforms/platform3.gd" type="Script" id=1]
[ext_resource path="res://Map Components/Platforms/platform.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 24 )

[node name="platform3" type="Node2D"]
script = ExtResource( 1 )

[node name="destination" type="Position2D" parent="."]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="platform" parent="KinematicBody2D" instance=ExtResource( 2 )]
position = Vector2( -64, 0 )

[node name="platform2" parent="KinematicBody2D" instance=ExtResource( 2 )]

[node name="platform3" parent="KinematicBody2D" instance=ExtResource( 2 )]
position = Vector2( 64, 0 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
position = Vector2( 0, -40 )
collision_layer = 8
collision_mask = 35

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
shape = SubResource( 1 )

[node name="destruction_timer" type="Timer" parent="."]
[connection signal="body_entered" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="destruction_timer" to="." method="_on_destruction_timer_timeout"]
